--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "cpanelnodeexpress",
+  "name": "codeial",
   "version": "1.0.0",
+  "description": "social app for coders",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod_start": "set Node_Exppress_ENVIRONMENT=production & nodemon index.js"
+    "prod_start": "set NODEEXPRESS_ENVIRONMENT=production & nodemon app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/harish0775/Live-Node-Express.git"
-  },
-  "author": "Harish Nishad",
+  "author": "Harsh Verma",
   "license": "ISC",
   "dependencies": {
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
+    "crypto": "^1.0.1",
     "del": "^6.0.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
@@ -44,10 +42,5 @@
   },
   "devDependencies": {
     "gulp": "^4.0.2"
-  },
-  "bugs": {
-    "url": "https://github.com/harish0775/Live-Node-Express/issues"
-  },
-  "homepage": "https://github.com/harish0775/Live-Node-Express#readme",
-  "description": ""
+  }
 }
